# ai-security-scanner-cyber-sentinel-group-me

./: .env.example  .gitignore  README.md  comandi_git.md  pyproject.toml  requirements.txt
examples/: basic_scan.py  demo.py
src/ai_engine/: pplx_client.py
src/ai_scanner/ai_engine/: __init__.py  pplx_client.py  risk_score.py  rules.py
src/ai_scanner/api_web/: app.py
src/ai_scanner/cli/: ai_scanner.py
src/ai_scanner/gui/: tk_app.py
src/ai_scanner/parser/: __init__.py  models.py  nmap_xml_parser.py
src/ai_scanner/reporter/: __init__.py  html_reporter.py  pdf_reporter.py
src/ai_scanner/reporter/templates/: report.html.j2  summary.html.j2
src/ai_scanner/scanner/: __init__.py  nmap_wrapper.py  scanner_config.py
src/ai_scanner/storage/: __init__.py  json_store.py  sqlite_store.py
src/ai_scanner/web/: app.py
src/ai_security_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_parser.py  test_scanner.py
