# pyproject.toml
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-security-scanner"
version = "0.1.0"
description = "AI Security Scanner (MVP)"
requires-python = ">=3.10"
dependencies = [
  "Jinja2>=3.1",
  "reportlab>=4.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ai-scanner = "ai_scanner.cli.ai_scanner:main"
